--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "axios": "^0.27.2",
     "firebase": "^8.10.1",
-    "firebase-admin": "^9.8.0",
+    "firebase-admin": "^9.12.0",
+    "micro": "^9.4.1",
     "next": "latest",
     "next-auth": "^4.10.3",
     "react": "17.0.1",
