--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.10.1",
     "firebase-admin": "^9.12.0",
     "micro": "^9.4.1",
+    "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.10.3",
     "react": "17.0.1",
